# Speckle2Graph

./: .gitignore  README.md  pyproject.toml  setup.py
src/speckle2graph/: __init__.py  container.py  interfaces.py  pipeline.py
src/speckle2graph/graph_builders/: node_property_extractors.py  simple_graph_builder.py
src/speckle2graph/models/: __init__.py  geometry.py
src/speckle2graph/neo4j_queries/: basic_queries.py  basic_query.py  label_makers.py
src/speckle2graph/traversers/: __init__.py  base_traverser.py  property_extractors.py  traverse_ifc_dag.py  traverse_revit_dag.py
src/speckle2graph/utils/: helpers.py
src/speckle_revit_graph/graph_builders/: simple_graph_builder.py
src/speckle_revit_graph/models/: geometry.py  logical.py
src/speckle_revit_graph/parsers/: traverseDAG.py
src/speckle_revit_graph/utils/: helpers.py
tests/: test_geometricalGraph.py  test_graph_builder.py  test_ifc_graph_builder.py  test_logicalGraph.py  test_neo4j.py  test_pipeline.py  test_revit_graph_builder.py  test_revit_neo4j.py  test_traverse.py  test_traverseDAG.py  test_traverse_ifc.py  test_traverse_revit.py
