[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Speckle2Graph"
version = "0.0.1"
description = "Enable graph-based analysis of any Speckle model."
authors = [
    { name = "Arsy", email = "arseneyworking@gmail.com" },
]

license = {text = "Apache"}

requires-python = ">=3.10"
dependencies = [
    "specklepy",
    "numpy",
    "scipy",
    "trimesh",
    "python-fcl",
    "networkx",
    "rtree",
    "neo4j",
    "tqdm"
]

readme = "README.md"